--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                 <a href="https://github.com/ayux9h/AiWeatherApp" class="project-link">View Project</a>
             </div>
             <div class="project-card">
-                <h3>Project 2</h3>
-                <p>Detection of Sarcasm & Irony in Multimodal Social Media Posts</p>
+                <h3>Mini E-Commerce Website</h3>
+                <p>Built a responsive full-stack web app using Node.js, Express, HTML, CSS, and JavaScript.</p>
                 <a href="#" class="project-link">View Project</a>
             </div>
             <div class="project-card">
-                <h3>[Project 3 Title]</h3>
-                <p></p>
+                <h3>AI/ML based Project</h3>
+                <p>Detection of Sarcsm and Irony in Multimodal Social Media Posts. </p>
                 <a href="#" class="project-link">View Project</a>
             </div>
         </div>
@@ -113,4 +113,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
